proy_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proyecto-ft-service
spec:
  type: ClusterIP
  selector:
    app: proyecto-ft
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
