proy_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proyecto-ft-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  labels:
    name: proyecto-ft
spec:
  rules:
  - http:
      paths:
        - backend:
            service:
              name: proyecto-ft-service
              port:
                number: 3000
          path: /
          pathType: Prefix
